workspace-sf/force-app/main/default/objects/CriterioConfiguracao__c/CriterioConfiguracao__c.object-meta.xml
<CustomObject>
    <description>Objeto responsável por armazenar os critérios de configuração de uma oferta</description>
    <label>Critério da configuração</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Critérios da configuração</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>