workspace-sf/force-app/main/default/objects/CriterioConfiguracao__c/fields/Campo__c.field-meta.xml
<CustomField>
    <fullName>Campo__c</fullName>
    <label>Campo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>