workspace-sf/force-app/main/default/objects/CriterioConfiguracao__c/fields/Operador__c.field-meta.xml
<CustomField>
    <fullName>Operador__c</fullName>
    <label>Operador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Igual</fullName>
            </value>
            <value>
                <fullName>Diferente</fullName>
            </value>
            <value>
                <fullName>Menor</fullName>
            </value>
            <value>
                <fullName>Menor ou igual</fullName>
            </value>
            <value>
                <fullName>Maior</fullName>
            </value>
            <value>
                <fullName>Maior ou igual</fullName>
            </value>
            <value>
                <fullName>Contém</fullName>
            </value>
            <value>
                <fullName>Não contém</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>