workspace-sf/force-app/main/default/objects/CriterioConfiguracao__c/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <label>Valor</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>